# inferno

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/imgui/: imgui_sdl.h
resources/: box.mtl  cornell-box.mtl  cornell.mtl  dragon-normals.mtl  lucy-normals.mtl
resources/models/: conference.mtl  cornell-box.mtl  lucy-normals-larger.mtl  lucy.mtl
src/: common.hpp  inferno.cpp  inferno.hpp  maths.hpp  pixel.hpp
src/acceleration/: accel.cpp  accel.hpp  bbox.cpp  bbox.hpp  kd.cpp  kd.hpp  kdslow.cpp  kdslow.hpp
src/core/: progressiveRenderer.cpp  progressiveRenderer.hpp  renderer.cpp  renderer.hpp
src/core/renderengine/: progressiverenderer.cpp  progressiverenderer.hpp
src/definitions/: camera.cpp  camera.hpp  material.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp
src/definitions/materials/: BRDF.cpp  BRDF.hpp  material.cpp  material.hpp  random.cpp  random.hpp  specular.cpp  specular.hpp  texture.cpp  texture.hpp
src/definitions/primatives/: mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  primative.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/denoise/: denoise.cpp  denoise.hpp  oidn.cpp  oidn.hpp
src/display/: display.cpp  display.hpp  displayinterface.cpp  displayinterface.hpp  framebuffer.cpp  framebuffer.hpp  tonemap.cpp  tonemap.hpp  tonemapfb.cpp  tonemapfb.hpp
src/engine/: progressiverenderer.cpp  progressiverenderer.hpp  renderengine.cpp  renderengine.hpp  tonemap.cpp  tonemap.hpp
src/util/: assetloader.cpp  assetloader.hpp  threadpool.cpp  threadpool.hpp  tiny_obj_loader.hpp  types.hpp
src/util/imgui/: imgui_impl_sdl.cpp  imgui_sdl.cpp
test/: conference.cpp  default.cpp  lucy_cornell.cpp  main.cpp  stanford_dragon.cpp  stanford_dragon_cornell.cpp
